# Terraxel-WorkflowTest

./: App.rc  CMakeLists.txt  build-windows-x64.yml  build-windows-x86.yml  devNotes.txt  options.txt  readme.md
.github/workflows/: build-linux-x64.yml  build-linux-x86.yml  build-windows-x64.yml  build-windows-x86.yml  cmake-windows_x64.yml  cmake-windows_x86.yml
blocks/: builtIn.json  testBlocks.json
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
models/: cactus.json  carpet.json  crop.json  cross.json  cube.json  lily.json  liquid.json  pebble.json  slab.json  testModel.json
shaders/: cross_fragment.glsl  cross_vertex.glsl  crosshair_vertex.glsl  liquid_fragment.glsl  liquid_vertex.glsl  vertex.glsl
src/: main.cpp
src/core/: camera.cpp  camera.hpp  input.cpp  input.hpp  options.cpp  options.hpp  window.cpp  window.hpp
src/renderer/: imguiOverlay.cpp  imguiOverlay.hpp  renderer.cpp  renderer.hpp
src/world/: blockDB.cpp  blockDB.hpp  block_interaction.cpp  block_interaction.hpp  chunk.cpp  chunk.hpp  chunkTerrain.cpp  chunkTerrain.hpp  modelDB.cpp  modelDB.hpp  noise.cpp  noise.hpp  structureDB.cpp  structureDB.hpp  world.cpp  world.hpp
structures/: cactus.json  cactus2.json  firTree.json  flowerCactus.json  greenMaple.json  orangeMaple.json  puddle.json  pyramid.json  redMaple.json  rock.json  smallFirTree.json  tinyTree.json  tree.json  yellowMaple.json
